EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==04/01/2010==
Derision: SoD - Tracking

==03/31/2010==
Derision: SoD - Groups should be as functional as previous clients, except Group Leadership AA doesn't work.
Derision: SoD - Fixed items being incorrectly flagged as No Trade/Copied

==03/30/2010==
Trevius: SoD - Corrected the opcode for Mob Health Updates so they update properly.
Trevius: SoD - Added a few new Opcodes and Structures for SoD packets that aren't used yet.

==03/28/2010==
Derision: SoD - Fixed client animation/runspeed glitch.
Derision: All Clients - Player position updates to other players should be more accurate.
Trevius: Updated #race and #fixmob commands to allow up to race 626 which is the total for the SoD client.
Derision: SoD - Very preliminary work on groups. You can form a group, but nothing else.

==03/27/2010==
Trevius: SoD - A couple more Opcode updates.
Trevius: SoD - Some group structures work, but grouping is still not functional.
Derision: SoD - Fixed random client crashes due to spawn packets and invisible mobs should now be invisible.
Derision: SoD - Did a basic Encode on OP_WhoAllResponse. Still needs work for various flags (LD/Trader/Buyer) etc.

==03/26/2010==
Trevius: SoD - Finished updated Opcodes and they should now be caught up with what we have in SoF.
Trevius: SoD - Updated Item Struct and now 1 inventory item can load correctly.
Trevius: SoD - Updated Position Update packet structures.
Trevius: SoD - Character Inventory now fully loads.
Trevius: SoD - AAs now load and appear to function properly.
Derision: SoD - Spawns work, sometimes. Client will crash randomly sometimes when receiving spawns
Derision: SoD - Added SoD.cpp to .vcproj files
Derision: SoD - Found showname field in Spawn Struct.
Derision: SoD - Identified equip_chest2 field in Spawn Struct.
Trevius: SoD - Looting now works.
Trevius: SoD - Commands that display item links now show links correctly.
