@@ -1299,6 +1299,19 @@ ENCODE(OP_Illusion) {
 	FINISH_ENCODE();
 }
 
+ENCODE(OP_ShopPlayerBuy)
+{
+	ENCODE_LENGTH_EXACT(Merchant_Sell_Struct);
+	SETUP_DIRECT_ENCODE(Merchant_Sell_Struct, structs::Merchant_Sell_Struct);
+	OUT(npcid);
+	OUT(playerid);
+	OUT(itemslot);
+	OUT(quantity);
+	OUT(price);
+
+	FINISH_ENCODE();
+}
+
 ENCODE(OP_WearChange) {
 	ENCODE_LENGTH_EXACT(WearChange_Struct);
 	SETUP_DIRECT_ENCODE(WearChange_Struct, structs::WearChange_Struct);
@@ -2200,6 +2213,19 @@ DECODE(OP_WearChange) {
 	FINISH_DIRECT_DECODE();
 }
 
+DECODE(OP_ShopPlayerBuy)
+{
+	DECODE_LENGTH_EXACT(structs::Merchant_Sell_Struct);
+	SETUP_DIRECT_DECODE(Merchant_Sell_Struct, structs::Merchant_Sell_Struct);
+
+	IN(npcid);
+	IN(playerid);
+	IN(itemslot);
+	IN(quantity);
+	IN(price);
+
+	FINISH_DIRECT_DECODE();
+}
 
 DECODE(OP_ClientUpdate) {
     // for some odd reason, there is an extra byte on the end of this on occasion.. 
